--- a/playbook.yml
+++ b/playbook.yml
@@ -1,14 +1,140 @@
----
-- name: Prelim Skills Exam Kent Jan Viernes
-  hosts: ubuntu
-  roles:
-    - Elastic
-    - ElasticCentos
-    - Kibana
-    - KibanaCentos
-    - Logstash
-    - LogstashCentos
-    - installpkgubuntu
-    - installpkgcentos
-    - stopfirewalld
-    - stopufw
+- name: HOA_4.1
+  hosts: elasticsearch
+  tags: elasticsearch,ubuntu
+  tasks:
+    - name: Include variables
+      include_vars:
+        file: config.yml
+
+    - name: Install Elasticsearch dependency (ubuntu)
+      include_role:
+        name: installpkgubuntu
+      vars:
+        package: openjdk-8-jdk
+      when: ansible_facts['distribution'] == 'Ubuntu'
+
+    - name: Install Nginx (ubuntu)
+      include_role:
+        name: installpkgubuntu
+      vars:
+        package: nginx
+      when: ansible_facts['distribution'] == 'Ubuntu'
+
+    - name: Stopping Apache2 (ubuntu)
+      service:
+        name: apache2
+        state: stopped
+      when: ansible_facts['distribution'] == 'Ubuntu'
+
+    - name: Install apt-transport-https
+      include_role:
+        name: installpkgubuntu
+      vars:
+        package: apt-transport-https
+      when: ansible_facts['distribution'] == 'Ubuntu'
+
+    - name: Configure Elasticsearch (Ubuntu)
+      include_role:
+        name: Elastic
+      when: ansible_facts['distribution'] == 'Ubuntu'
+      
+- name: HOA_4.1
+  hosts: elasticsearch
+  tags: elasticsearch,centos
+  tasks:
+    - name: Include variables
+      include_vars:
+        file: config.yml
+
+    - name: Install Java [Elastic search dependency] (CentOS)
+      include_role:
+        name: installpkgcentos
+      vars:
+        package: java-1.8.0-openjdk
+      when: ansible_facts['distribution'] == 'CentOS'
+
+    - name: Configuring Elastic Search (CentOS)
+      include_role:
+        name: ElasticCentos
+      when: ansible_facts['distribution'] == 'CentOS'
+
+- name: Install and Configure Kibana
+  hosts: kibana
+  tags: kibana,ubuntu
+  tasks:
+    - name: Include vars
+      include_vars:
+        file: config.yml
+
+    - name: Install Kibana (Ubuntu)
+      include_role:
+        name: installpkgubuntu
+      vars:
+        package: kibana
+      when: ansible_facts['distribution'] == 'Ubuntu'
+
+    - name: Configure Kibana (Ubuntu)
+      include_role:
+        name: Kibana
+      when: ansible_facts['distribution'] == 'Ubuntu'
+      
+- name: Install and Configure Kibana
+  hosts: kibana
+  tags: kibana,centos
+  tasks:
+    - name: Include vars
+      include_vars:
+        file: config.yml
+
+    - name: Install Kibana (CentOS)
+      include_role:
+        name: installpkgcentos
+      vars:
+        package: kibana
+      when: ansible_facts['distribution'] == 'CentOS'
+
+    - name: Configure Kibana (CentOS)
+      include_role:
+        name: KibanaCentos
+      when: ansible_facts['distribution'] == 'CentOS'
+
+
+- name: Install and Configure Logstash
+  hosts: logstash
+  tags: logstash,ubuntu
+  tasks:
+    - name: Include vars
+      include_vars:
+        file: config.yml
+
+    - name: Install Logstash (Ubuntu)
+      include_role:
+        name: installpkgubuntu
+      vars:
+        package: logstash
+      when: ansible_facts['distribution'] == 'Ubuntu'
+
+    - name: Configure Logstash (Ubuntu)
+      include_role:
+        name: Logstash
+      when: ansible_facts['distribution'] == 'Ubuntu'
+
+- name: Install and Configure Logstash
+  hosts: logstash
+  tags: logstash,centos
+  tasks:
+    - name: Include vars
+      include_vars:
+        file: config.yml
+
+    - name: Install logstash (CentOS)
+      include_role:
+        name: installpkgcentos
+      vars:
+        package: logstash
+      when: ansible_facts['distribution'] == 'CentOS'
+
+    - name: Configure logstash (CentOS)
+      include_role:
+        name: LogstashCentos
+      when: ansible_facts['distribution'] == 'CentOS'
